@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Aug 2011; kTitan xbmc-9999.ebuild:
+  Remove unneeded fix, add warning regarding ccache, remove unused compiler
+  option
+
   30 Jun 2011; kTitan xbmc-9999.ebuild:
   fixed compile and cleanup of the ebuild
 
